package config;

message ConnsvrConfig {
	optional int32 server_zone = 1;
	optional string listen_ip = 2;
	optional int32 svr_inst_id = 3;
}